# coralcore

./: .coveragerc  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  INSTALL.md  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  quick_test_coral.py  setup.cfg  setup.py  test_clean.py
coralcore/: __init__.py
coralcore/parameters/: __init__.py  acidification_lag.py  acoustic_signature.py  bleaching_threshold.py  calcification.py  quantum_yield.py  skeletal_density.py  surface_roughness.py  wave_dissipation.py
coralcore/rhi/: alert.py  composite.py  weights.py
coralcore/utils/: acoustics.py  chemistry.py  visualization.py
coralcore/validation/: cross_validation.py
docs/whitepaper/: CORAL-CORE_RESEARCH_PAPER.docx
reports/: generate_sample_reports.py
reports/alerts/: alert_manager.py
reports/daily/: generate_daily_report.py
reports/monthly/: generate_monthly_report.py
reports/weekly/: generate_weekly_report.py
tests/: README.md  __init__.py  conftest.py
tests/data/: sample_parameters.csv
tests/field/: test_field_data.py
tests/integration/: test_pipeline.py
tests/light/: test_simple.py
tests/unit/parameters/: test_calcification.py
tests/unit/rhi/: test_alert.py  test_composite.py
tests/unit/utils/: test_acoustics.py  test_chemistry.py
