# 🪸 CORAL-CORE Project Configuration
# Biomineralization Dynamics & Reef Hydro-Acoustic Buffering Framework
# Version: 1.0.0 | DOI: 10.5281/zenodo.18913829

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel>=0.38",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "coralcore"
version = "1.0.0"
description = "Biomineralization Dynamics & Reef Hydro-Acoustic Buffering Framework"
readme = "README.md"
requires-python = ">=3.9, <3.12"
license = {text = "MIT"}
authors = [
    {name = "Samir Baladi", email = "gitdeeper@gmail.com"},
]
maintainers = [
    {name = "Samir Baladi", email = "gitdeeper@gmail.com"},
]
keywords = [
    "coral", "reef", "biomineralization", "calcification",
    "ocean-acidification", "climate-change", "marine-biology",
    "acoustics", "photogrammetry", "machine-learning",
    "coastal-engineering", "conservation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Oceanography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "xarray>=2023.4.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
    "requests>=2.30.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pyserial>=3.5",
    "flask>=2.3.0",
    "dash>=2.9.0",
    "plotly>=5.14.0",
    "click>=8.1.0",
]

[project.urls]
"Homepage" = "https://github.com/gitdeeper8/coralcore"
"Documentation" = "https://coralcore.netlify.app/docs"
"Repository" = "https://github.com/gitdeeper8/coralcore.git"
"DOI" = "https://doi.org/10.5281/zenodo.18913829"
"Web Dashboard" = "https://coralcore.netlify.app"
"Research Paper" = "https://doi.org/10.1007/s00338-026-0001-x"
"Issues" = "https://github.com/gitdeeper8/coralcore/issues"
"Changelog" = "https://github.com/gitdeeper8/coralcore/blob/main/CHANGELOG.md"

[project.scripts]
coralcore-init = "coralcore.cli.init:main"
coralcore-collect = "coralcore.cli.collect:main"
coralcore-process = "coralcore.cli.process:main"
coralcore-rhi = "coralcore.cli.rhi:main"
coralcore-test-sensors = "coralcore.cli.test_sensors:main"
coralcore-serve = "coralcore.cli.serve:main"
coralcore-analyze = "coralcore.cli.analyze:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "pylint>=2.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]
ml = [
    "tensorflow>=2.12.0",
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "prophet>=1.1.0",
    "statsmodels>=0.14.0",
]
gpu = [
    "cupy-cuda11x>=12.0.0",
    "cudf>=23.0.0",
    "cuml>=23.0.0",
    "tensorrt>=8.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.23.0",
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.22.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-mock>=3.0.0",
    "responses>=0.23.0",
]
sensors = [
    "pyserial>=3.5",
    "pyusb>=1.2",
    "pyvisa>=1.13",
    "pyvisa-py>=0.5.0",
    "sami-alk-driver>=0.1.0",
    "amar-g4-driver>=0.2.0",
    "diving-pam-driver>=0.1.0",
    "rdi-adcp-driver>=0.1.0",
    "sbe37-driver>=0.1.0",
]
acoustic = [
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "obspy>=1.4.0",
    "echopype>=0.6.0",
    "pyhydrophone>=0.1.3",
    "pydal>=0.3.0",
]
photogrammetry = [
    "opencv-python>=4.7.0",
    "open3d>=0.17.0",
    "pycolmap>=0.5.0",
    "pyceres>=2.2.0",
    "trimesh>=3.21.0",
    "pymeshfix>=0.16.0",
    "pyvista>=0.39.0",
]
web = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.3.0",
    "flask-restx>=1.1.0",
    "flask-jwt-extended>=4.5.0",
    "dash>=2.9.0",
    "dash-bootstrap-components>=1.4.0",
    "gunicorn>=20.1.0",
    "uvicorn>=0.22.0",
]
all = [
    "coralcore[dev,ml,gpu,docs,test,sensors,acoustic,photogrammetry,web]",
]

[tool.setuptools]
packages = ["coralcore"]

[tool.setuptools.package-dir]
coralcore = "coralcore"

[tool.setuptools.package-data]
coralcore = [
    "data/*.csv",
    "data/*.json",
    "config/*.yaml",
    "config/*.json",
    "models/*.h5",
    "models/*.pkl",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["coralcore"]
known_third_party = [
    "numpy", "scipy", "pandas", "xarray", "matplotlib",
    "seaborn", "sklearn", "torch", "tensorflow", "flask",
    "dash", "plotly", "click", "pytest",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "scipy.*",
    "pandas.*",
    "matplotlib.*",
    "sklearn.*",
    "torch.*",
    "tensorflow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = """
    -ra
    --strict-markers
    --strict-config
    --tb=short
    --verbose
    --cov=coralcore
    --cov-report=term
    --cov-report=html
    --cov-report=xml
    --no-cov-on-fail
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "sensor: marks tests that require actual sensor hardware",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
    "unit: marks unit tests",
    "field: marks field data validation tests",
]

[tool.coverage.run]
source = ["coralcore"]
omit = [
    "*/tests/*",
    "*/docs/*",
    "*/examples/*",
    "*/setup.py",
    "*/version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",
    "pass",
    "^\\s*\\.\\.\\.$",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.pylint.MASTER]
jobs = 0
load-plugins = "pylint.extensions.docparams,pylint.extensions.docstyle"
persistent = true
suggestion-mode = true

[tool.pylint.MESSAGES_CONTROL]
disable = [
    "missing-docstring",
    "invalid-name",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-statements",
    "fixme",
    "broad-except",
]

[tool.pylint.DESIGN]
max-args = 10
max-attributes = 15
max-locals = 25
max-returns = 10
max-branches = 20
max-statements = 100
max-parents = 10
max-module-lines = 2000

[tool.pylint.REPORTS]
output-format = "colorized"
reports = "no"
score = "yes"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-*"
skip = "*-win32 *-manylinux_i686"
test-skip = "*-macosx_arm64"
test-command = "pytest {project}/tests"

[tool.setuptools_scm]
write_to = "coralcore/_version.py"
fallback_version = "1.0.0"

[tool.tbump]
version = "1.0.0"

[tool.tbump.files]
version = ["coralcore/__init__.py", "setup.py", "setup.cfg", "pyproject.toml", "docs/conf.py"]

# =============================================================================
# END OF PROJECT CONFIGURATION
# =============================================================================
