# 🪸 CORAL-CORE Setup Configuration
# Biomineralization Dynamics & Reef Hydro-Acoustic Buffering Framework
# Version: 1.0.0 | DOI: 10.5281/zenodo.18913829

[metadata]
name = coralcore
version = 1.0.0
author = Samir Baladi
author_email = gitdeeper@gmail.com
maintainer = Samir Baladi
maintainer_email = gitdeeper@gmail.com
description = Biomineralization Dynamics & Reef Hydro-Acoustic Buffering Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gitdeeper8/coralcore
download_url = https://github.com/gitdeeper8/coralcore/archive/v1.0.0.tar.gz
project_urls =
    Documentation = https://coralcore.netlify.app/docs
    Source = https://github.com/gitdeeper8/coralcore
    Bug Reports = https://github.com/gitdeeper8/coralcore/issues
    DOI = https://doi.org/10.5281/zenodo.18913829
    Web Dashboard = https://coralcore.netlify.app
    Research Paper = https://doi.org/10.1007/s00338-026-0001-x
license = MIT
license_file = LICENSE
platforms = any
keywords =
    coral,
    reef,
    biomineralization,
    calcification,
    ocean-acidification,
    climate-change,
    marine-biology,
    acoustics,
    photogrammetry,
    machine-learning,
    coastal-engineering,
    conservation,
    red-sea,
    great-barrier-reef

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Oceanography
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9, <3.12
setup_requires =
    setuptools>=61.0
    wheel>=0.38
install_requires =
    numpy>=1.24.0
    scipy>=1.10.0
    pandas>=2.0.0
    xarray>=2023.4.0
    matplotlib>=3.7.0
    seaborn>=0.12.0
    scikit-learn>=1.2.0
    requests>=2.30.0
    pyyaml>=6.0
    python-dotenv>=1.0.0
    pyserial>=3.5
    flask>=2.3.0
    dash>=2.9.0
    plotly>=5.14.0
    click>=8.1.0

[options.packages.find]
include =
    coralcore
    coralcore.*
exclude =
    tests
    tests.*
    docs
    docs.*
    examples
    examples.*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-xdist>=3.0.0
    pytest-asyncio>=0.20.0
    black>=23.0.0
    isort>=5.0.0
    flake8>=6.0.0
    pylint>=2.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0
    ipython>=8.0.0
    jupyter>=1.0.0
ml =
    tensorflow>=2.12.0
    torch>=2.0.0
    pytorch-lightning>=2.0.0
    scikit-learn>=1.2.0
    xgboost>=1.7.0
    lightgbm>=3.3.0
    prophet>=1.1.0
    statsmodels>=0.14.0
gpu =
    cupy-cuda11x>=12.0.0
    cudf>=23.0.0
    cuml>=23.0.0
    tensorrt>=8.5.0
docs =
    sphinx>=7.0.0
    sphinx-rtd-theme>=1.2.0
    sphinx-autodoc-typehints>=1.23.0
    mkdocs>=1.4.0
    mkdocs-material>=9.0.0
    mkdocstrings>=0.22.0
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-xdist>=3.0.0
    pytest-asyncio>=0.20.0
    pytest-mock>=3.0.0
    responses>=0.23.0
sensors =
    pyserial>=3.5
    pyusb>=1.2
    pyvisa>=1.13
    pyvisa-py>=0.5.0
    sami-alk-driver>=0.1.0
    amar-g4-driver>=0.2.0
    diving-pam-driver>=0.1.0
    rdi-adcp-driver>=0.1.0
    sbe37-driver>=0.1.0
acoustic =
    librosa>=0.10.0
    soundfile>=0.12.0
    obspy>=1.4.0
    echopype>=0.6.0
    pyhydrophone>=0.1.3
    pydal>=0.3.0
photogrammetry =
    opencv-python>=4.7.0
    open3d>=0.17.0
    pycolmap>=0.5.0
    pyceres>=2.2.0
    trimesh>=3.21.0
    pymeshfix>=0.16.0
    pyvista>=0.39.0
web =
    flask>=2.3.0
    flask-cors>=4.0.0
    flask-socketio>=5.3.0
    flask-restx>=1.1.0
    flask-jwt-extended>=4.5.0
    dash>=2.9.0
    dash-bootstrap-components>=1.4.0
    gunicorn>=20.1.0
    uvicorn>=0.22.0
all = 
    %(dev)s
    %(ml)s
    %(gpu)s
    %(docs)s
    %(test)s
    %(sensors)s
    %(acoustic)s
    %(photogrammetry)s
    %(web)s

[options.entry_points]
console_scripts =
    coralcore-init = coralcore.cli.init:main
    coralcore-collect = coralcore.cli.collect:main
    coralcore-process = coralcore.cli.process:main
    coralcore-rhi = coralcore.cli.rhi:main
    coralcore-test-sensors = coralcore.cli.test_sensors:main
    coralcore-serve = coralcore.cli.serve:main
    coralcore-analyze = coralcore.cli.analyze:main

coralcore.sensors =
    sami = coralcore.sensors.sami:SAMISensor
    amar = coralcore.sensors.amar:AMARSensor
    pam = coralcore.sensors.pam:PAMSensor
    adcp = coralcore.sensors.adcp:ADCPSensor
    sbe37 = coralcore.sensors.sbe37:SBE37Sensor
    gopro = coralcore.sensors.gopro:GoProSensor

coralcore.physics =
    calcification = coralcore.physics.calcification:CalcificationModel
    wave = coralcore.physics.wave:WaveDissipationModel
    quantum = coralcore.physics.quantum:QuantumYieldModel
    density = coralcore.physics.density:SkeletalDensityModel
    acidification = coralcore.physics.acidification:AcidificationLagModel
    acoustic = coralcore.physics.acoustic:AcousticSignatureModel
    roughness = coralcore.physics.roughness:RoughnessIndexModel
    thermal = coralcore.physics.thermal:ThermalThresholdModel

coralcore.algorithms =
    rhi = coralcore.algorithms.rhi:RHIAlgorithm
    bleaching = coralcore.algorithms.bleaching:BleachingPredictor
    recruitment = coralcore.algorithms.recruitment:RecruitmentPredictor

coralcore.visualization =
    dashboard = coralcore.visualization.dashboard:create_dashboard
    timeseries = coralcore.visualization.timeseries:plot_timeseries
    acoustic = coralcore.visualization.acoustic:plot_spectrogram
    photogrammetry = coralcore.visualization.photogrammetry:plot_3d_mesh

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = .git,__pycache__,docs,venv,.venv,env,dist,build
per-file-ignores =
    __init__.py:F401

[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = coralcore
known_third_party = numpy,scipy,pandas,xarray,matplotlib,seaborn,sklearn,torch,tensorflow

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
disallow_untyped_defs = False
check_untyped_defs = True

[mypy.plugins.numpy.*]
plugins = numpy.typing.mypy_plugin

[pylint.MASTER]
ignore = CVS
ignore-patterns = ^.*\.md$,^.*\.rst$
jobs = 0
load-plugins = pylint.extensions.docparams, pylint.extensions.docstyle
persistent = yes
suggestion-mode = yes
unsafe-load-any-extension = no

[pylint.MESSAGES CONTROL]
disable = 
    C0111,  # missing-docstring
    C0103,  # invalid-name
    R0903,  # too-few-public-methods
    R0913,  # too-many-arguments
    R0914,  # too-many-locals
    R0915,  # too-many-statements
    W0511,  # fixme
    W0703,  # broad-except

[pylint.REPORTS]
output-format = colorized
reports = no
score = yes

[pylint.DESIGN]
max-args = 10
max-attributes = 15
max-locals = 25
max-returns = 10
max-branches = 20
max-statements = 100
max-parents = 10
max-module-lines = 2000

[pytest]
minversion = 7.0
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    -ra
    --strict-markers
    --strict-config
    --tb=short
    --verbose
    --cov=coralcore
    --cov-report=term
    --cov-report=html
    --cov-report=xml
    --no-cov-on-fail
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    sensor: marks tests that require actual sensor hardware
    gpu: marks tests that require GPU
    integration: marks integration tests
    unit: marks unit tests
    field: marks field data validation tests

[coverage:run]
source = coralcore
omit = 
    */tests/*
    */docs/*
    */examples/*
    */setup.py
    */version.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if __name__ == .__main__.:
    raise AssertionError
    raise NotImplementedError
    return NotImplemented
    pass
    ^\s*\.\.\.$

[coverage:html]
directory = htmlcov

[coverage:xml]
output = coverage.xml

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[bdist_wheel]
universal = 0

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[aliases]
test = pytest

[tool:pytest]
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[coverage:paths]
source = 
    coralcore/
    */site-packages/coralcore/

# =============================================================================
# END OF SETUP CONFIGURATION
# =============================================================================
